# Machine-Learning-with-Python

Udacity_Course 187/Colab Notebooks/: Cópia de fcc_book_recommendation_knn.ipynb  Cópia de fcc_predict_health_costs_with_regression.ipynb  Cópia de l01c01_introduction_to_colab_and_python.ipynb  Cópia de l02c01_celsius_to_fahrenheit.ipynb  Cópia de l03c01_classifying_images_of_clothing.ipynb  Cópia de l04c01_image_classification_with_cnns.ipynb  Cópia de l05c01_dogs_vs_cats_without_augmentation.ipynb  Cópia de l05c02_dogs_vs_cats_with_augmentation.ipynb  Cópia de l05c03_exercise_flowers_with_data_augmentation.ipynb  Cópia de l05c04_exercise_flowers_with_data_augmentation_solution.ipynb  Cópia de l06c01_tensorflow_hub_and_transfer_learning.ipynb  Cópia de l06c02_exercise_flowers_with_transfer_learning.ipynb  Cópia de l06c03_exercise_flowers_with_transfer_learning_solution.ipynb  Cópia de l07c01_saving_and_loading_models.ipynb  Cópia de l08c01_common_patterns.ipynb  Cópia de l08c02_naive_forecasting.ipynb  Cópia de l08c03_moving_average.ipynb  Cópia de l08c04_time_windows.ipynb  Cópia de l08c05_forecasting_with_machine_learning.ipynb  Cópia de l08c06_forecasting_with_rnn.ipynb  Cópia de l08c07_forecasting_with_stateful_rnn.ipynb  Cópia de l08c08_forecasting_with_lstm.ipynb  Cópia de l08c09_forecasting_with_cnn.ipynb  Cópia de l09c01_nlp_turn_words_into_tokens.ipynb  Cópia de l09c02_nlp_padding.ipynb  Cópia de l09c03_nlp_prepare_larger_text_corpus.ipynb  (+7 more)
boilerplate-rock-paper-scissors-master/: RPS.py  pyproject.toml
cats and dogs/: fcc_cat_dog.ipynb
(+3 files in other folders)
